syntax = "proto3";
package gosdk;

import "delphi.proto";

// Interface id
message IntfIndex {
    uint32    Ifidx = 1;
}

// spec part of the object
message TestInterfaceSpec {
    option (delphi.update_event) = true;
    delphi.ObjectMeta      Meta         = 1;
    IntfIndex              Key          = 2;
    string                 MacAddress   = 3;
}
